Changelog
---------
    1.0.9.0:
        + Feature: Added config variable "EnableFriendlyFireLevel" to enable friendly fire on defined level.
        + Feature: Added config variable "DisableRtvLevel" to disable rtv if leader is on defined level.
        * Fixed: Not to display winner motd after map end if database was slow to display motd right
            after player win.
        * Fixed:
            L 02/19/2010 - 00:25:54: [SM] Native "GG_GetPlayerPlaceInStat" reported: Client is not currently ingame [15]
            L 02/19/2010 - 00:25:54: [SM] Displaying call stack trace for plugin "gungame_display_winner.smx":
            L 02/19/2010 - 00:25:54: [SM]   [0]  Line 75, gungame_display_winner.sp::GG_OnLoadRank()
        * German translation has been updated. Thanks to tObIwAnKeNoBi.
        * Fixed: 
            L 02/02/2010 - 17:11:02: [SM] Native "SetEntProp" reported: Entity -1 (-1) is invalid
            L 02/02/2010 - 17:11:02: [SM] Displaying call stack trace for plugin "gungame.smx":
            L 02/02/2010 - 17:11:02: [SM]   [0]  Line 725, gungame/util.sp::UTIL_ReloadActiveWeapon()
            L 02/02/2010 - 17:11:02: [SM]   [1]  Line 271, gungame/event.sp::_PlayerDeath()
        * Portuguese translation has been updated. Thanks to VoGon.

    1.0.8.10:
        * Translation file has been changed. Need update from translators.
        + Feature: Added config variable "HandicapTimesPerMap" option to give handicap level 
            maximum this times per map;
        + Feature: Added config variable "MultiLevelAmount" for number of levels to get bonus.
            All config variables names changed from "TripleLevel*" to "MultiLevel*".
        + Feature: Added config variable "KnifeProMaxDiff". If a players level is x amount below 
            the persons level they knifed they will not get a level up and the person knifed will not 
            get a level down.
        * Fixed: